re #613 fixed alignment of icons/titles/labels in tables

--- a/code/media/koowa/com_koowa/less/koowa/_icons.less
+++ b/code/media/koowa/com_koowa/less/koowa/_icons.less
@@ -171,8 +171,3 @@
         }
     }
 }
-
-
-a > .koowa_icon {
-    display: inline;
-}
